# CPURenderer

./: CMakeLists.txt  Makefile  README.md  demo.cpp  main.cpp  player.cpp  player.hpp  screen.hpp  util.hpp  video.fs  video.vs
assets/: glow.frag
examples/: channels.cpp  client.cpp  demo.cpp  demo2.cpp  input.cpp  life.cpp  multi.cpp  texture.cpp  vc.cpp
lib/imgui/: Makefile  cmake_install.cmake  imconfig.h
lib/imguiNode/: CMakeLists.txt
lib/imguiText/: TextEditor.h
lib/stb/: CMakeLists.txt
src/: color.hpp  debug.hpp  font_data.hpp  gl.cpp  gl.hpp  input.cpp  input.hpp  player.cpp  player.hpp  renderContext.cpp  renderContext.hpp  screen.hpp  static_data.hpp  texture.hpp  util.hpp  window.cpp  window.hpp
src/vc/: data.hpp  node.cpp  node.hpp  texturenode.cpp  texturenode.hpp
